# silabificacao

./: LICENSE  README.md  syllable.cabal
.github/: copilot-instructions.md
app/: Main.hs
backend/: README.md  syllable.cabal
backend/app/: Main.hs
backend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
backend/dist-newstyle/packagedb/ghc-9.10.1/: package.cache  syllable-0.1.0.0-inplace.conf
backend/src/Syllable/: API.hs  Core.hs
docs/haddock/: Syllable-Core.html  doc-index.html  index.html  syllable.haddock
frontend/: README.md  elm-land.json  elm.json
frontend/src/: Api.elm
frontend/src/Api/: Syllable.elm
frontend/src/Pages/: Home_.elm
src/Syllable/: Core.hs
test/: Spec.hs
