cabal-version: 2.4
name:          syllable
version:       0.1.0.0
synopsis:      Haskell library for syllable separation
description:   A library that separates Portuguese words into syllables using phonetic rules
homepage:      https://github.com/jjunho/syllable
bug-reports:   https://github.com/jjunho/syllable/issues
license:       MIT
license-file:  LICENSE
author:        jjunho
maintainer:    jjunho@example.com
copyright:     2024 jjunho
category:      Text
build-type:    Simple
extra-source-files: README.md

library
    exposed-modules:
        Syllable.Core
    build-depends:
        base ^>=4.20.0.0,
        containers
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable syllable-exe
    main-is: Main.hs
    build-depends:
        base ^>=4.20.0.0,
        syllable
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall

test-suite syllable-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base ^>=4.20.0.0,
        syllable,
        hspec
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall